# gOS

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
.devcontainer/: dev.Dockerfile  devcontainer.json
bootloader/: CMakeLists.txt
bootloader/include/uefi/boot/: actions.h
bootloader/include/uefi/boot/menu/memory/: memory.h
bootloader/include/uefi/common/console/: input.h  screen.h
bootloader/include/uefi/common/helper/: helper.h
bootloader/include/uefi/common/log/: log.h
bootloader/include/uefi/common/memory/: memory.h
bootloader/include/uefi/common/power/: power.h
bootloader/src/uefi/apps/loader/: osloader.c
bootloader/src/uefi/apps/loader/framebuffer/: framebuffer.c
bootloader/src/uefi/apps/loader/handoff/: handoff.c
bootloader/src/uefi/boot/: actions.c  bootx64.c
bootloader/src/uefi/boot/menu/memory/: memory.c
bootloader/src/uefi/common/console/: input.c  screen.c
bootloader/src/uefi/common/console/menu/: menu.c
bootloader/src/uefi/common/helper/: helper.c
bootloader/src/uefi/common/image/: image.c
bootloader/src/uefi/common/memory/: memory.c
bootloader/src/uefi/common/power/: power.c
framebuffer/: entry.S  kernel.c
kernel/: CMakeLists.txt  kernel.c
kernel/src/: kernel.c
kernel/src/arch/x86_64/: entry.S
kernel/src/linker/: kernel.ld
linker/: kernel.ld
scripts/: build.sh  clean.sh  run.ps1  run.sh
shared/: bootinfo.h
src/uefi/boot/: bootx64.c
src/uefi/boot/menu/: actions.c  actions.h  menu.c  menu.h
src/uefi/common/console/: input.c  screen.c  screen.h
src/uefi/common/console/menu/: menu.c  menu.h
src/uefi/common/helper/: helper.c
src/uefi/common/image/: image.c  image.h
src/uefi/common/input/: input.c  input.h
src/uefi/common/memory/: memory.c  memory.h
src/uefi/common/power/: power.c
src/uefi/loader/: osloader.c
src/uefi/loader/framebuffer/: framebuffer.c  framebuffer.h
src/uefi/loader/handoff/: handoff.c  handoff.h
src/uefi/memory_menu/: memory_menu.c
